--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 4fr;
-    gap: 5px;
-
+    /* gap: 5px; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .sidebar {
@@ -18,23 +18,35 @@
     padding-bottom: 40px;
 }
 
-
-
+.dash img {
+    margin-right: 10px;
+    width: 3rem;
+}
 
 .dash {
     display: flex;
+    margin-left: 20px;
+    font-size: 1.3rem;
 }
-
-
 
 .side-block-1 div {
     display: flex;
-    margin-left: 20px;
+    margin-left: 30px;
+    font-size: 1.2rem;
+}
+
+.side-block-1 img {
+    margin-right: 20px;
 }
 
 .side-block-2 div {
     display: flex;
-    margin-left: 20px;
+    margin-left: 30px;
+    font-size: 1.2rem;
+}
+
+.side-block-2 img {
+    margin-right: 20px;
 }
 
 .header {
@@ -42,6 +54,42 @@
     grid-column: 2 / 4;
     grid-row: 1 / 2;
     background-color: #bfdbfe;
+}
+
+.header {
+    display: flex;
+}
+
+.header1 {
+    display: flex;
+    padding: 10px;
+    margin: 1rem;
+    margin-left: 2rem;
+    padding-right: 25rem;
+    align-items: center;
+}
+
+.header2 {
+    display: flex;
+    padding: 10px;
+    margin: 1rem;
+    margin-left: 2rem;
+    align-items: center;
+}
+
+.header1 img {
+    margin-right: 1rem;
+    width: 2.2rem;
+    
+}
+
+
+
+.search {
+    background: #eff6ff;
+    width: 500px;
+    height: 40px;
+    border-radius: 25px;
 }
 
 .name-buttons {
@@ -55,14 +103,12 @@
     display: grid;
     grid-column:  2 / 3;
     background-color: #eff6ff;
-
 }
 
 .announce {
     display: grid;
     grid-column:  3 / 4;
     background-color: #eff6ff;
-
 }
 
 button {
@@ -71,3 +117,4 @@ button {
     border-radius: 5px;
     border: none;
 }
+
