--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 4fr 5fr;
     /* gap: 5px; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -27,6 +32,7 @@
     display: flex;
     margin-left: 20px;
     font-size: 1.3rem;
+    align-items: center;
 }
 
 .side-block-1 div {
@@ -53,7 +59,7 @@
     display: grid;
     grid-column: 2 / 4;
     grid-row: 1 / 2;
-    background-color: #bfdbfe;
+    background-color: #eff6ff;
 }
 
 .header {
@@ -65,7 +71,7 @@
     padding: 10px;
     margin: 1rem;
     margin-left: 2rem;
-    padding-right: 25rem;
+    padding-right: 20rem;
     align-items: center;
 }
 
@@ -75,6 +81,8 @@
     margin: 1rem;
     margin-left: 2rem;
     align-items: center;
+    font-size: 1.2rem;
+
 }
 
 .header1 img {
@@ -83,10 +91,19 @@
     
 }
 
+.header2 img {
+    margin-right: 1rem;
+}
+
+.header2 #bell {
+    /* margin-right: 1rem; */
+    width: 2rem;
+    
+}
 
 
 .search {
-    background: #eff6ff;
+    background: #bfdbfe;
     width: 500px;
     height: 40px;
     border-radius: 25px;
@@ -96,25 +113,56 @@
     display: grid;
     grid-column: 2 / 4;
     grid-row: 2 / 3;
-    background-color: #bfdbfe;
+    background-color: #eff6ff;
 }
+
+
 
 .main {
     display: grid;
     grid-column:  2 / 3;
-    background-color: #eff6ff;
+    background-color: #93c5fd;
 }
 
 .announce {
     display: grid;
     grid-column:  3 / 4;
-    background-color: #eff6ff;
+    background-color: #93c5fd;
 }
 
 button {
-    width: 100px;
+    width: 7rem;
+    height: 3rem;
     background-color: #60a5fa;
-    border-radius: 5px;
+    border-radius: 50px;
     border: none;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #FFFFFF;
+    margin-right: 1.2rem;
 }
 
+.flex-buttons {
+    display: flex;
+    margin-left: 2rem;
+    align-items: center;
+
+}
+
+.avatar {
+    padding-right: 1rem;
+}
+
+.texts {
+    margin-right: 26rem;
+    align-items: center;
+}
+
+.buttons3 {
+    display: flex;
+    
+}
+
+.main {
+    font-size: 2rem;
+}
